- fixed some typo's - added location of code in the footer

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -40,7 +40,7 @@
   },
   "education": {
     "title": "Education",
-    "explanation": "Translating a degree is never fully accurate, hence you find the original name here. Between parentheses is the name according to the Bologna Process."
+    "explanation": "Translating a degree is never fully accurate, hence you find the original name here. Between parentheses is the degree's name according to the Bologna Process and additionally the academic title."
   },
   "learnings": {
     "title": "Learn",
